# sigzyme

./: LICENSE  Pipfile  README.md  environment.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: deploy.yml  tests.yml
docs/: conf.py  index.rst
src/sigzyme/: __init__.py  core.py  utils.py
tests/: test_core.py  test_utils.py
