[tool.poetry]
name = "sigzyme"
version = "0.1b1"
description = "Efficient batch decomposition of time series data."
authors = ["Eduardo Nunes <dioph@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
numba = "^0.57.1"
torch = "2.0.1"
conda-lock = "^2.2.0"
python = ">=3.8.0,<4.0"

[tool.poetry.group.docs.dependencies]
jupyter = ">=1.0.0"
myst-nb = ">=0.17.2"
numpydoc = ">=1.1.0"
pydata-sphinx-theme = ">=0.13.3"

[tool.poetry.group.test.dependencies]
black = ">=21.12b0"
flake8 = ">=3.8.4"
isort = ">=5.6.4"
numpy = ">=1.18"
pytest = ">=6.1.2"
pytest-cov = ">=2.10.1"
scipy = ">=0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88
force_sort_within_sections = true
src_paths = ["src/sigzyme"]
skip_gitignore = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]
parallel = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
